--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,17 @@
+@media only screen and (min-width: 0px) and (max-width: 700px) {
+
+table {
+  table-layout: fixed ;
+  width: 100% ;
+}
+td {
+      display:inline-block;
+        width:100%;
+}
+
+}
+
+
 /* latin-ext */
 @font-face {
   font-family: 'Lato';
