--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,5 @@
 @media only screen and (min-width: 0px) and (max-width: 700px) {
 
-  /*.one {*/
-  /*  text-align: center;*/
-  /*  padding-left: 100%;*/
-  /*  padding-right: 100%;*/
-  /*  !* transform: scale(1.20); *!*/
-  /*}*/
-
 table {
   table-layout: fixed ;
   width: 100% ;
@@ -27,28 +20,34 @@ td {
 /*	vertical-align:middle;*/
 /*}*/
 
-  .pic_region{
-    width: 238%;
-    margin: auto;
-    text-align: center;
-    /*transform: scale(0.5);*/
-    /* padding-left: 60%;
-    padding-right: 30%; */
-  }
+.pic_region{
+  margin: auto;
+}
 
-  .pic_separately {
-    width: 60%;
-    max-width: 60%;
-    margin: auto;
-    text-align: center;
-    /* padding-left: 60%;
-    padding-right: 30%; */
+.one{
+  padding-top: 25px;
+  padding-bottom: 5px;
+  margin: auto;
+  transform: scale(1.3);
+}
 
-  }
+
+.teaching_exp{
+  margin: auto;
+  transform: scale(1.3);
+}
+
+.pic_separately {
+  transform: scale(1.15);
+}
 
 
 .heading_center{
         text-align: center;
+}
+
+.paper_title_center{
+  text-align: center;
 }
 
 .footer{
@@ -60,20 +59,22 @@ td {
   padding: 0;
 }
 
-.top{
-        /* width:122%; */
-}
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-
 }
 
 
+/*img {*/
+/*  width: 100%;*/
+/*  margin: auto;*/
+/*  text-align: center;*/
+/*  !*padding-left: 50%;*!*/
+/*  !*padding-right: 50%;*!*/
+
+/*}*/
+
+
+.pic_region{
+  width: 40%;
+}
 /* latin-ext */
 @font-face {
   font-family: 'Lato';
@@ -140,8 +141,6 @@ td {
 }
 
 
-
-
 a {
   color: #1772d0;
   text-decoration: none;
@@ -183,7 +182,7 @@ heading {
 papertitle {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
   font-size: 15px;
-  font-weight: 700
+  font-weight: 700;
 }
 
 name {
@@ -192,11 +191,22 @@ name {
 font-weight: 900
 }
 
+.paper_title {
+ text-align: justify;
+}
+
 .one {
   width: 160px;
   height: 160px;
   position: relative;
 }
+
+.teaching_exp{
+  width: 160px;
+  height: 160px;
+  position: relative;
+}
+
 
 .two {
   width: 160px;
