--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 0px) and (max-width: 539px) {
+@media only screen and (min-width: 0px) and (max-width: 600px) {
 
 table {
   table-layout: fixed ;
@@ -14,11 +14,7 @@ tr {
 td {
   width: 100%;
 }
-/*td {*/
-/*      display:inline-block;*/
-/*        !* width:120%; *!*/
-/*	vertical-align:middle;*/
-/*}*/
+
 
 .pic_region{
   margin: auto;
@@ -31,7 +27,6 @@ td {
   transform: scale(1.3);
 }
 
-
 .teaching_exp{
   margin: auto;
   transform: scale(1.3);
@@ -41,9 +36,12 @@ td {
   transform: scale(1.15);
 }
 
-
 .heading_center{
         text-align: center;
+}
+
+.text_just{
+        text-align: justify;
 }
 
 .paper_title_center{
@@ -60,16 +58,6 @@ td {
 }
 
 }
-
-
-/*img {*/
-/*  width: 100%;*/
-/*  margin: auto;*/
-/*  text-align: center;*/
-/*  !*padding-left: 50%;*!*/
-/*  !*padding-right: 50%;*!*/
-
-/*}*/
 
 
 .pic_region{
@@ -141,6 +129,17 @@ td {
 }
 
 
+
+
+body,
+td,
+th,
+tr,
+a {
+  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-size: 16px;
+  color: #4f4f4e;
+}
 a {
   color: #1772d0;
   text-decoration: none;
@@ -152,19 +151,10 @@ a:hover {
   text-decoration: none;
 }
 
-body,
-td,
-th,
-tr,
-a {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 16px;
-}
-
-
 p{
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
   font-size: 17px;
+  color: #4f4f4e;
 }
 
 
@@ -184,6 +174,7 @@ papertitle {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
   font-size: 18px;
   font-weight: 700;
+  color: #7183b7;
 }
 
 name {
