--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,71 +1,10 @@
-@media only screen and (min-width: 0px) and (max-width: 600px) {
-
-table {
-  table-layout: fixed ;
-  width: 100% ;
-  vertical-align:middle;
-}
-
-tr {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-td {
-  width: 100%;
-}
-
-
+/* Control size of the main image */
 .pic_region{
-  margin: auto;
-}
-
-.one{
-  padding-top: 25px;
-  padding-bottom: 5px;
-  margin: auto;
-  transform: scale(1.3);
-}
-
-.teaching_exp{
-  margin: auto;
-  transform: scale(1.3);
-}
-
-.pic_separately {
-  transform: scale(1.15);
-}
-
-.heading_center {
-  text-align: center;
-}
-
-.text_just{
-        text-align: justify;
-}
-
-.top_text{font-size: 16px;
-text-align: justify}
-
-.paper_title_center{
-  text-align: center;
-}
-
-.footer{
-        /*width:100%;*/
-  margin: auto;
-}
-
-.footer-img {
-  padding: 0;
-}
-
+  width: 35%;
 }
 
 
-.pic_region{
-  width: 30%;
-}
+
 /* latin-ext */
 @font-face {
   font-family: 'Lato';
@@ -131,80 +70,81 @@ text-align: justify}
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+/* Main site settings */
+name {
+  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-size: 50px;
+font-weight: 900;
+color: rgba(13, 14, 90, 0.705);
+}
+
 
 body,
 td,
 th,
 tr{
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 17px;
   color: #4f4f4e;
 }
+
 a {
   color: #1772d0;
   text-decoration: none;
 }
 
-
 a:focus,
 a:hover {
   color: #f09228;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 17px;
 }
-
-
 
 p{
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 15px;
+  font-size: 17px;
   color: #4f4f4e;
 }
 
 
-
 strong {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 heading {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 30px;
+  font-size: 35px;
   font-weight: 900;
   color:rgba(13, 14, 90, 0.705);
 }
 
 papertitle {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 700;
   color:rgba(13, 14, 90, 0.705);
 }
 
 
-name {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 45px;
-font-weight: 900;
-color: rgba(13, 14, 90, 0.705);
-}
-
 .paper_title {
  text-align: left;
 }
 
-.one {
-  height: 160px;
-  width: 160px;
-  position: relative;
-
-}
 
 .teaching_exp{
   width: 160px;
   height: 160px;
   position: relative;
+}
+
+
+/* Image settings */
+.one {
+  height: 160px;
+  width: 160px;
+  position: relative;
+
 }
 
 
@@ -230,81 +170,194 @@ span.highlight {
 } */
 
 
+/* Set to smooth for smooth scroll action when pressing the top nav tab */
 html {
   scroll-behavior: smooth;
 }
 
-
+.pic_region_top{
+  display: none;
+}
 
 /* FOR THE NAV BAR ON TOP */
-
 /* Create a sticky/fixed navbar */
 #navbar {
   overflow: hidden;
-  background-color: #f1f1f1;
-  padding: 30px 10px; /* Large padding which will shrink on scroll (using JS) */
-  transition: 0.4s; /* Adds a transition effect when the padding is decreased */
+  background-color:rgb(50, 50, 83);
+  padding: 20px 10px; /* Large padding which will shrink on scroll (using JS) */
+  transition: 0.5s; /* Adds a transition effect when the padding is decreased */
   position: fixed; /* Sticky/fixed navbar */
   width: 100%;
   top: 0; /* At the top */
   left:0;
   z-index: 99;
-  border-radius: 4px;
+  border-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+
 }
 
 /* Style the navbar links */
 #navbar a {
-  float: left;
-  color: rgba(20, 22, 151, 0.705);
+  float: none;
+  color: rgba(228, 228, 234, 0.934);
   text-align: center;
-  padding: 12px;
+  padding: 20px; /*gap between tabs */
   text-decoration: none;
-  font-size: 18px;
-  line-height: 10px;
-  border-radius: 4px;
+  font-size: 20px;
+  line-height: 2px;
+  border-radius: 0px;
 }
 
-/* Style the logo */
-#navbar #logo {
-  font-size: 30px;
-  font-weight: bold;
-  transition: 0.4s;
-}
 
-/* Links on mouse-over */
+
+ /* Links on mouse-over */
 #navbar a:hover {
-  color: #1d1d1d;
+  color: #96949f;
+  font-size: 22px;
+  /* background-color: aqua; */
 
 }
+
 
 /* Style the active/current link */
 #navbar a.active {
-  background-color: rgba(20, 22, 151, 0.705);
-  color: white;
+  border-bottom: 3px solid white;
+  padding-bottom: 4px;
 }
 
 /* Display some links to the right */
 #navbar-right {
-  float: right;
-  padding-right: 20px;
+  float: none;
+  text-align: center;
 }
+
+
 
 /* Add responsiveness - on screens less than 580px wide, display the navbar vertically instead of horizontally */
 @media screen and (max-width: 580px) {
   #navbar {
-    padding: 20px 10px !important; /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
-    top: -10px;
+    padding: 20px 0px !important; /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
+    top: -5px;
   }
 
-  #navbar #logo {
-    color:#f1f1f1
+  /* #navbar #logo {
+    color:rgb(50, 50, 83);
+    float: none;
+    display: block;
+    margin-bottom: -30px;
+  } */
+
+   /* Links on mouse-over */
+  #navbar a:hover {
+  color: #ffffff;
+  font-size: 17=8px;
+  /* background-color: aqua; */
   }
+
+
 
   #navbar a {
     float: none;
     text-align: center;
+
   }
+
   #navbar-right {
     float: none;
+    text-align: center;
+    font-size: 17px;
   }
+  /* Hide bottom pic */
+  .pic_region{
+    display: none;
+  }
+  /* Show top pic */
+  .pic_region_top{
+    display: inline;
+  }
+
+  /* Change TXT size */
+  name{
+    font-size: 38px;
+  }
+
+  heading{
+    font-size: 25px;
+  }
+
+  a,
+  a:hover,
+  body,
+  td,
+  th,
+  tr{
+    font-size: 14px;
+  }
+
+
+
+  table {
+    table-layout: fixed ;
+    border-spacing:0px;
+    width: 100% ;
+    vertical-align:middle;
+  }
+
+  tr {
+    border-spacing: 0px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  td {
+    width: 100%;
+    border-spacing: 0px;
+
+  }
+
+  .text_just {
+    float: center;
+    padding-right: 0px;
+  }
+
+/* #Adjust paper images */
+  .one{
+    margin: auto;
+    margin-top: -5px;
+    margin-bottom: -25px;
+    transform: scale(1.0);
+  }
+
+  .teaching_exp{
+    margin: auto;
+    transform: scale(1.3);
+  }
+
+
+  .heading_center {
+    text-align: center;
+  }
+
+  .text_just{
+          text-align: justify;
+  }
+
+  .top_text{font-size: 14px;
+  text-align: justify}
+
+  .paper_title_center{
+    text-align: center;
+  }
+
+  .footer{
+
+    margin: auto;
+  }
+
+  .footer-img {
+    padding: 0;
+  }
+
 }
+
