--- a/stylesheet.css
+++ b/stylesheet.css
@@ -140,10 +140,30 @@ papertitle {
 
 
 /* Image settings */
+.teaching_1 {
+  height: 160px;
+  width: 160px;
+  position: relative;
+  border-radius:5%;
+  /* border: 1px solid #eeebeb; */
+
+}
+
+.teaching_2 {
+  height: 160px;
+  width: 160px;
+  position: relative;
+  border-radius:5%;
+  /* border: 1px solid #eeebeb; */
+
+}
+
 .one {
   height: 160px;
   width: 160px;
   position: relative;
+  border-radius:5%;
+  /* border: 1px solid #eeebeb; */
 
 }
 
@@ -153,6 +173,9 @@ papertitle {
   height: 160px;
   position: absolute;
   transform: scale(1.10);
+  border-radius:5%;
+  /* border: 1px solid #eeebeb; */
+
 }
 
 .fade {
@@ -239,6 +262,7 @@ html {
   #navbar {
     padding: 20px 0px !important; /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
     top: -5px;
+    font-size:3px;
   }
 
   /* #navbar #logo {
@@ -248,25 +272,24 @@ html {
     margin-bottom: -30px;
   } */
 
-   /* Links on mouse-over */
-  #navbar a:hover {
-  color: #ffffff;
-  font-size: 17=8px;
-  /* background-color: aqua; */
-  }
-
-
 
   #navbar a {
     float: none;
     text-align: center;
+    font-size: 13px;
 
   }
+   /* Links on mouse-over */
+  #navbar a:hover {
+  color: #ffffff;
+  font-size: 14px;
+  /* background-color: aqua; */
+  }
+
 
   #navbar-right {
     float: none;
     text-align: center;
-    font-size: 17px;
   }
   /* Hide bottom pic */
   .pic_region{
@@ -279,22 +302,25 @@ html {
 
   /* Change TXT size */
   name{
-    font-size: 38px;
-  }
-
-  heading{
     font-size: 25px;
   }
 
-  a,
+  heading{
+    font-size: 18px;
+  }
+
+  papertitle{font-size:13px}
+
+  a, strong,
   a:hover,
   body,
   td,
   th,
   tr{
-    font-size: 14px;
+    font-size: 10px;
   }
-
+  .top_text{font-size: 10px;
+  text-align: justify}
 
 
   table {
@@ -329,9 +355,22 @@ html {
     transform: scale(1.0);
   }
 
-  .teaching_exp{
-    margin: auto;
-    transform: scale(1.3);
+
+
+  .teaching_1{
+    margin-top: -60px;
+    margin-bottom: -70px;
+    margin-left: auto;
+    margin-right: auto;
+    transform: scale(1.0);
+  }
+
+  .teaching_2{
+    margin-top: -60px;
+    margin-bottom: -80px;
+    margin-left: auto;
+    margin-right: auto;
+    transform: scale(1.0);
   }
 
 
@@ -343,8 +382,7 @@ html {
           text-align: justify;
   }
 
-  .top_text{font-size: 14px;
-  text-align: justify}
+
 
   .paper_title_center{
     text-align: center;
